# rcann

./: .gitignore  Cargo.toml  rustfmt.toml
rcann/: Cargo.toml
rcann-examples/: Cargo.toml
rcann-examples/examples/: mnist_numbers.rs
rcann-examples/src/: lib.rs  main.rs  mnist_numbers.rs  util.rs
rcann-opencl/: Cargo.toml
rcann-opencl/benches/: ocl_general.rs  ocl_matmul.rs
rcann-opencl/examples/: clinfo.rs  test.rs  test_kernel.rs
rcann-opencl/src/: backend.rs  error.rs  lib.rs  tensor.rs  util.rs
rcann-opencl/src/backend/: matmul.rs  mod.rs  other.rs
rcann-opencl/src/kernels/: mod.rs  types.cl
rcann-opencl/src/kernels/gemm/: gemm.cl  mod.rs  test.rs
rcann-opencl/src/kernels/general/: general.cl  mod.rs  test.rs
rcann-opencl/src/kernels/mse/: mean_squared_error2.cl  mod.rs  test.rs
rcann-opencl/src/kernels/naive_sgemm/: mod.rs  naive_sgemm.cl
rcann-opencl/src/kernels/scoring/: mod.rs  scoring.cl  test.rs
rcann-opencl/src/kernels/softmax/: mod.rs  softmax.cl  test.rs
rcann-opencl/src/kernels/transpose/: mod.rs  test.rs  transpose.cl
rcann-opencl/src/kernels/zero_padding/: mod.rs  zero_padding.cl
rcann-opencl/src/tensor/: event_list.rs  mod.rs
rcann-opencl/src/util/: cache.rs  kernel_macros.rs  mod.rs
rcann/benches/: cpu_matmul.rs
rcann/src/: activation.rs  dtype.rs  lib.rs  loss.rs  scoring.rs
rcann/src/backend/: mod.rs
rcann/src/backend/cpu/: backend.rs  math.rs  mod.rs
rcann/src/hpo/: mod.rs  param.rs
rcann/src/net/: initializer.rs  mod.rs
rcann/src/net/layer/: concrete.rs  fully_connected.rs  mod.rs
rcann/src/raw/: mnist_example.rs  mod.rs  net.rs
rcann/src/tensor/: dims.rs  mod.rs
rcann/src/tensor/native/: approx.rs  base.rs  cow.rs  debug.rs  extras.rs  iter.rs  mod.rs  owned.rs  tensor.rs  view.rs
rcann/src/util/: bench.rs  mod.rs
rcann_examples/: Cargo.toml
rcann_examples/examples/: mnist_numbers.rs
rcann_examples/src/: util.rs
rcann_opencl/: Cargo.toml
rcann_opencl/benches/: ocl_matmul.rs
rcann_opencl/examples/: clinfo.rs
rcann_opencl/src/: error.rs  lib.rs  tensor.rs  util.rs
rcann_opencl/src/backend/: matmul.rs  mod.rs  other.rs
rcann_opencl/src/kernels/: mod.rs
rcann_opencl/src/kernels/gemm/: gemm.cl  mod.rs  test.rs
rcann_opencl/src/kernels/general/: general.cl  mod.rs  test.rs
rcann_opencl/src/kernels/mse/: mean_squared_error.cl  mod.rs  test.rs
rcann_opencl/src/tensor/: event_list.rs  mod.rs
rcann_opencl/src/util/: cache.rs  kernel_macros.rs  mod.rs
src/: activation.rs  backend.rs  data.rs  dtype.rs  loss.rs  main.rs  tensor.rs
src/backend/: mod.rs
src/backend/cpu/: backend.rs  math.rs
src/cpu/: backend.rs  math.rs  matrix.rs  mod.rs
src/examples/: mnist_numbers.rs  mod.rs  util.rs
src/net/: layer.rs  mod.rs  transform.rs
src/raw/: mnist_example.rs  train.rs  util.rs
src/tensor/: dims.rs  mod.rs
src/tensor/native/: base.rs
src/util/: mod.rs
(+9 files in other folders)
