[package]
name = "rcann-opencl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { version = "0.2.30", features=["rust_1_51"] }
derive_builder = "0.11.2"
once_cell = "1.16.0"
opencl3 = "0.9.1"
rcann = { path = "../rcann", features=["approx"] }

[dev-dependencies]
approx = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"
bencher = "0.1.5"

[[bench]]
name = "ocl_matmul"
harness = false

[[bench]]
name = "ocl_general"
harness = false
