[package]
name = "rcann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
matrixmultiply = { version = "0.3.2", features = ["threading"] }
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
