[package]
name = "rcann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.5.1", optional = true }
matrixmultiply = { version = "0.3.2", features = ["threading"] }
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = { version = "1.0.87", optional = true }

[features]
default = []
approx = ["dep:approx"]
serde = ["dep:serde", "dep:serde_json"]