[package]
name = "rcann"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.5.1", optional = true }
matrixmultiply = { version = "0.3.2", features = ["threading"] }
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = { version = "1.0.87", optional = true }
half = { version = "2.4.1", features = ["num-traits", "serde"], optional = true }

[dev-dependencies]
bencher = "0.1.5"

[features]
default = []
approx = ["dep:approx"]
serde = ["dep:serde", "dep:serde_json"]
half = ["dep:half"]

[[bench]]
name = "cpu_matmul"
harness = false
